--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       </div>
 
       <div class="ar-viewer">
-        <h2>View in AR</h2>
+        <h2>View in AR (iPhone Only)</h2>
         <a rel="ar" href="LDI.usdz">
           <img src="thumbnail.png" alt="LDI Machine Thumbnail">
         </a>
@@ -139,7 +139,7 @@
 
     <!-- Right Column: Embedded PDF -->
     <div class="half">
-      <h2>Product Guide</h2>
+      <h2>Technical PDF</h2>
       <iframe src="LDIAHrebrand.pdf" type="application/pdf"></iframe>
     </div>
   </main>
