--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Laser Drill Inspection Machine Digital Guide</title>
+  <title>Laser Drill Hole Inspection Machine Digital Guide</title>
   <style>
     body {
       margin: 0;
