--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </div>
 
       <div class="ar-viewer">
-        <h2>View in AR</h2>
+        <h2>View in AR (iPhone Only)</h2>
         <a rel="ar" href="LDI.usdz">
           <img src="thumbnail.png" alt="LDI Machine Thumbnail">
         </a>
@@ -172,7 +172,7 @@
 
     <!-- Right Column -->
     <div class="half">
-      <h2>Product Guide</h2>
+      <h2>Technical PDF</h2>
       <iframe src="LDIAHrebrand.pdf" type="application/pdf"></iframe>
 
       <div class="carousel-container">
